## Day 5 总结
- 新增 BusinessException 业务异常
- 新增 GlobalExceptionHandler 全局异常处理
- Result 增加 fail(code, message)
- 统一处理参数校验异常
- 统一处理 JSON 请求体格式错误
- DeepSeek 模型调用异常转为业务异常
- 接口错误返回统一 JSON 格式