@@ -2,12 +2,14 @@ package com.wenjie.aiassistant.client.impl;
 
 import com.wenjie.aiassistant.client.ChatModelClient;
 import com.wenjie.aiassistant.config.AiProperties;
+import com.wenjie.aiassistant.exception.BusinessException;
 import lombok.Data;
 import lombok.RequiredArgsConstructor;
 import org.springframework.boot.autoconfigure.condition.ConditionalOnProperty;
 import org.springframework.http.MediaType;
 import org.springframework.stereotype.Component;
 import org.springframework.web.client.RestClient;
+import org.springframework.web.client.RestClientException;
 
 import java.util.List;
 
@@ -20,33 +22,43 @@ public class DeepSeekChatModelClient implements ChatModelClient {
 
     @Override
     public String chat(String message) {
-        RestClient restClient = RestClient.builder()
-                .baseUrl(aiProperties.getBaseUrl())
-                .defaultHeader("Authorization", "Bearer " + aiProperties.getApiKey())
-                .defaultHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
-                .build();
+        try {
+            RestClient restClient = RestClient.builder()
+                    .baseUrl(aiProperties.getBaseUrl())
+                    .defaultHeader("Authorization", "Bearer " + aiProperties.getApiKey())
+                    .defaultHeader("Content-Type", MediaType.APPLICATION_JSON_VALUE)
+                    .build();
 
-        DeepSeekChatRequest request = new DeepSeekChatRequest();
-        request.setModel(aiProperties.getModel());
-        request.setMessages(List.of(
-                new DeepSeekMessage("system", "你是一个专业、简洁、可靠的企业 AI 助手。"),
-                new DeepSeekMessage("user", message)
-        ));
+            DeepSeekChatRequest request = new DeepSeekChatRequest();
+            request.setModel(aiProperties.getModel());
+            request.setMessages(List.of(
+                    new DeepSeekMessage("system", "你是一个专业、简洁、可靠的企业 AI 助手。"),
+                    new DeepSeekMessage("user", message)
+            ));
 
-        DeepSeekChatResponse response = restClient.post()
-                .uri("/chat/completions")
-                .body(request)
-                .retrieve()
-                .body(DeepSeekChatResponse.class);
+            DeepSeekChatResponse response = restClient.post()
+                    .uri("/chat/completions")
+                    .body(request)
+                    .retrieve()
+                    .body(DeepSeekChatResponse.class);
 
-        if (response == null
-                || response.getChoices() == null
-                || response.getChoices().isEmpty()
-                || response.getChoices().getFirst().getMessage() == null) {
-            return "模型暂无回复";
+            if (response == null
+                    || response.getChoices() == null
+                    || response.getChoices().isEmpty()
+                    || response.getChoices().get(0).getMessage() == null
+                    || response.getChoices().get(0).getMessage().getContent() == null) {
+                throw new BusinessException(502, "模型返回内容为空");
+            }
+
+            return response.getChoices().get(0).getMessage().getContent();
+
+        } catch (BusinessException e) {
+            throw e;
+        } catch (RestClientException e) {
+            throw new BusinessException(502, "模型服务调用失败，请检查 API Key、模型名称或网络连接");
+        } catch (Exception e) {
+            throw new BusinessException(500, "模型调用异常，请稍后再试");
         }
-
-        return response.getChoices().getFirst().getMessage().getContent();
     }
 
     @Data
